Subida seccion Nos. y arreglo nav

--- a/index.html
+++ b/index.html
@@ -43,13 +43,18 @@
         <h1>Geriátrico Abuela Angelina</h1>
         <div class="nosotros">
             <div class="texto-nosotros">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat.</p>
+                <p><span>Abuela Angelina</span>
+                    es una de las pocas residencias que hasta el día de la fecha es atendida por su dueño,
+                    <span>Enrique</span>, quien decidió nombrar este espacio bajo el nombre de una persona muy querida, y
+                    recordada por sus nietos, como una mujer simpática y adorable. Su legado de cuidado y
+                    dedicación, son los valores que dejaron una huella en este hogar.
+                    Enrique cuenta con <span>más de 4 décadas de experiencia</span> en el cuidado de sus residentes,
+                    caracterizado por su gran vocación de servicio y por su habilidad de comprender las
+                    necesidades de quienes llegan a Abuela Angelina como también de acompañar y empatizar
+                    con sus familiares.</p>
             </div>
             <div class="imagen-nosotros">
-                <img src="img/abuelos.jpg" alt="Abuelos">
+                <img src="img/seccion-nosotros.jpeg" alt="Abuelos">
             </div>
         </div>
     </section>
