--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=PT+Sans:ital@0;1&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" href="css/lightbox.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://kit.fontawesome.com/ce4b0e445d.js" crossorigin="anonymous"></script>
     <script>
@@ -43,15 +44,15 @@
         <h1>Geriátrico Abuela Angelina</h1>
         <div class="nosotros">
             <div class="texto-nosotros">
-                <p><span>Abuela Angelina</span>
+                <p>"<span>Abuela Angelina</span>
                     es una de las pocas residencias que hasta el día de la fecha es atendida por su dueño,
-                    <span>Enrique</span>, quien decidió nombrar este espacio bajo el nombre de una persona muy querida, y
-                    recordada por sus nietos, como una mujer simpática y adorable. Su legado de cuidado y
+                    <span>Enrique</span>, quien nombró a este espacio bajo el nombre de una persona muy querida, y
+                    recordada por su familia, como una mujer simpática y adorable. Su legado de cuidado y
                     dedicación, son los valores que dejaron una huella en este hogar.
                     Enrique cuenta con <span>más de 4 décadas de experiencia</span> en el cuidado de sus residentes,
                     caracterizado por su gran vocación de servicio y por su habilidad de comprender las
                     necesidades de quienes llegan a Abuela Angelina como también de acompañar y empatizar
-                    con sus familiares.</p>
+                    con sus familiares."</p>
             </div>
             <div class="imagen-nosotros">
                 <img src="img/seccion-nosotros.jpeg" alt="Abuelos">
@@ -59,49 +60,31 @@
         </div>
     </section>
     <!--seccion nosotros-->
-    <main class=" contenedor seccion-principal">
+    <main class="seccion-principal">
         <h2>Nuestros Servicios</h2>
-        <div class="tabla-servicios">
+        <div class="tabla-servicios contenedor">
             <div class="servicio">
-                <div class="imagen-servicio">
-                    <img src="img/servicio1.jpg" alt="Abuelos Servicios">
-                </div>
-                <div class="contenido-servicio">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
+                <i class="fas fa-comment-medical salud"></i>
+                <h3>Servicios de Salud</h3>
+                <p>Contamos con distintos profesionales altamente capacitados para brindar los servicios medicos y de cuidado escenciales que requieren nuestros abuelos para poder llevar a cabo su dia a dia con comodidad y sintiéndose plenos.</p>
             </div>
             <div class="servicio">
-                <div class="imagen-servicio">
-                    <img src="img/servicio2.jpg" alt="Abuelos Servicios">
-                </div>
-                <div class="contenido-servicio">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
+                <i class="fas fa-building edificio"></i>
+                <h3>Servicios de Acomodación</h3>
+                <p>
+                    Nuestra casa cuenta con dos plantas, ventanales y altas puertas que conservan un aire no
+                    solamente encantador sino también cómodo.
+                    Contamos con 5 baños, un ascensor como solución para nuestros residentes y con un gran
+                    jardín.
+                </p>
             </div>
             <div class="servicio">
-                <div class="imagen-servicio">
-                    <img src="img/servicio3.jpg" alt="Abuelos Servicios">
-                </div>
-                <div class="contenido-servicio">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
+                <i class="fas fa-gifts regalo"></i>
+                <h3>Servicios Generales</h3>
+                <p>Brindamos servicios generales para el óptimo desarrollo de nuestros abuelos tales como juegos lúdicos, distintos tipos de fiestas temáticas, servicios tecnológicos como wifi e incluso, atención estética. </p>
             </div>
         </div>
+        <a class="boton-secundario" href="servicios.html">Ver más</a>
     </main>
     <!--seccion servicios-->
     <section class="contenedor mapa" id="mapa">
@@ -110,24 +93,36 @@
     </section>
     <!--seccion mapa-->
     <section class="contenedor galeria-index">
-        <div class="galeria">
-            <img src="img/servicio1.jpg" alt="Galeria abuelos">
-            <img src="img/servicio2.jpg" alt="Galeria abuelos">
-            <img src="img/servicio3.jpg" alt="Galeria abuelos">
-        </div>
-        <div class="galeria-texto">
-            <h3>Galería de imagenes</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <a href="galeria.html">Ver más</a>
+        <h2>Galería de imagenes</h2>
+        <div class="galeria-flex contenedor">
+            <div class="galeria">
+                <a href="img/servicio1.jpg" data-lightbox="galeria">
+                    <img src="img/servicio1.jpg">
+                </a>
+                <a href="img/servicio1.jpg" data-lightbox="galeria">
+                    <img src="img/servicio1.jpg">
+                </a>
+                <a href="img/servicio1.jpg" data-lightbox="galeria">
+                    <img src="img/servicio1.jpg">
+                </a>
+                <a href="img/servicio1.jpg" data-lightbox="galeria">
+                    <img src="img/servicio1.jpg">
+                </a>
+            </div>
+            <div class="galeria-texto">
+                <p>El equipo de trabajo es parte de un engranaje, indispensable y profesional, que junto a
+                    Enrique mantienen los pilares primordiales de la vocación de servicio y un trato digno, o
+                    como ellos dicen: <span>“Somos gente que cuidamos gente”</span>.
+                    Cada persona que llega a Abuela Angelina es diferente, y aquí es donde nuestro equipo se
+                    destaca, priorizando siempre las necesidades de cada uno, desde su salud física hasta lo
+                    emocional.
+                </p>
+                <a class="boton-secundario" href="galeria.html">Ver más</a>
+            </div>
         </div>
     </section>
     <!--seccion galeria index-->
-    <section class="contacto">
+    <section class="contacto parallax">
         <div class="contenedor tabla-contactos">
             <div class="icono-contacto">
                 <i class="fas fa-phone-square-alt"></i>
@@ -145,7 +140,7 @@
     </section>
     <!--seccion contacto-->
     <footer class="footer">
-        <div class="footer-contenido">
+        <div class="footer-contenido contenedor">
             <div class="informacion">
                 <p>Direccion:</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -161,6 +156,7 @@
     </footer><!-- footer -->
     <script type="text/javascript" src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/lightbox-plus-jquery.min.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
 </body>
 
