--- a/nosotros.html
+++ b/nosotros.html
@@ -19,11 +19,11 @@
 </head>
 
 <body>
-    <section class="navegacion-principal">
+    <section class="barra-interna">
         <div class="barra contenedor">
             <div class="barra-responsive">
                 <a class="logo" href="index.html">
-                     <img src="img/logo-blanco.png" alt="Logo">
+                    <img src="img/logo-blanco.png" alt="Logo">
                 </a>
                 <a class="barras" id="barras"><i class="fas fa-bars"></i></a>
             </div>
@@ -33,13 +33,8 @@
                 <a href="nosotros.html" class="boton-primario">Nosotros</a>
             </nav>
         </div>
-        <!--barra-->
-        <div class="texto-header contenedor">
-            <h2>Un Hogar como en familia</h2>
-            <p>"Somos gente que cuida gente"</p>
-        </div>
     </section>
-    <!--navegación principal-->
+    <!--barra interna-->
     <section class="contenedor seccion-nosotros">
         <h1>Geriátrico Abuela Angelina</h1>
         <div class="nosotros">
@@ -61,84 +56,36 @@
     </section>
     <!--seccion nosotros-->
     <main class="seccion-principal">
-        <h2>Nuestros Servicios</h2>
+        <h2>Sobre Nosotros</h2>
         <div class="tabla-servicios contenedor">
             <div class="servicio">
-                <i class="fas fa-comment-medical salud"></i>
-                <h3>Servicios de Salud</h3>
-                <p>Contamos con distintos profesionales altamente capacitados para brindar los servicios medicos y de cuidado escenciales que requieren nuestros abuelos para poder llevar a cabo su dia a dia con comodidad y sintiéndose plenos.</p>
+                <i class="fas fa-medal salud"></i>
+                <h3>Trayectoria</h3>
+                <p>Abuela Angelina lleva consigo más de 4 décadas de trayectoria y experiencia en el cuidado
+                    de sus residentes, caracterizada por un equipo de trabajo con gran vocación de servicio y
+                    habilidad para comprender las necesidades de quienes llegan a quedarse como también la
+                    predisposición de acompañar y empatizar con sus familiares</p>
             </div>
             <div class="servicio">
-                <i class="fas fa-building edificio"></i>
-                <h3>Servicios de Acomodación</h3>
+                <i class="fas fa-people-arrows edificio"></i>
+                <h3>Relación Humanitaria</h3>
                 <p>
-                    Nuestra casa cuenta con dos plantas, ventanales y altas puertas que conservan un aire no
-                    solamente encantador sino también cómodo.
-                    Contamos con 5 baños, un ascensor como solución para nuestros residentes y con un gran
-                    jardín.
+                    Sabemos que el período de adaptación es el más complejo por lo que tratamos de facilitar
+                    su acomodación, por lo que permitimos a sus familiares traer alguna pertenencia de
+                    especial valor, buscando que se encuentre en un ambiente lo más parecido a casa.
                 </p>
             </div>
             <div class="servicio">
-                <i class="fas fa-gifts regalo"></i>
-                <h3>Servicios Generales</h3>
-                <p>Brindamos servicios generales para el óptimo desarrollo de nuestros abuelos tales como juegos lúdicos, distintos tipos de fiestas temáticas, servicios tecnológicos como wifi e incluso, atención estética. </p>
-            </div>
-        </div>
-        <a class="boton-secundario" href="servicios.html">Ver más</a>
-    </main>
-    <!--seccion servicios-->
-    <section class="contenedor mapa" id="mapa">
-        <h2>¿Donde nos encontramos?</h2>
-        <h2>Mapa</h2>
-    </section>
-    <!--seccion mapa-->
-    <section class="contenedor galeria-index">
-        <h2>Galería de imagenes</h2>
-        <div class="galeria-flex contenedor">
-            <div class="galeria">
-                <a href="img/servicio1.jpg" data-lightbox="galeria">
-                    <img src="img/servicio1.jpg">
-                </a>
-                <a href="img/servicio1.jpg" data-lightbox="galeria">
-                    <img src="img/servicio1.jpg">
-                </a>
-                <a href="img/servicio1.jpg" data-lightbox="galeria">
-                    <img src="img/servicio1.jpg">
-                </a>
-                <a href="img/servicio1.jpg" data-lightbox="galeria">
-                    <img src="img/servicio1.jpg">
-                </a>
-            </div>
-            <div class="galeria-texto">
-                <p>El equipo de trabajo es parte de un engranaje, indispensable y profesional, que junto a
-                    Enrique mantienen los pilares primordiales de la vocación de servicio y un trato digno, o
-                    como ellos dicen: <span>“Somos gente que cuidamos gente”</span>.
-                    Cada persona que llega a Abuela Angelina es diferente, y aquí es donde nuestro equipo se
+                <i class="fas fa-users regalo"></i>
+                <h3>Equipo Sólido y Vocacional</h3>
+                <p>Cada persona que llega a Abuela Angelina es diferente, y aquí es donde nuestro equipo se
                     destaca, priorizando siempre las necesidades de cada uno, desde su salud física hasta lo
                     emocional.
-                </p>
-                <a class="boton-secundario" href="galeria.html">Ver más</a>
+                    Queremos que la casa sea un espacio de pertenencia, ajustado a las necesidades motrices
+                    y emocionales de cada residente.</p>
             </div>
         </div>
-    </section>
-    <!--seccion galeria index-->
-    <section class="contacto parallax">
-        <div class="contenedor tabla-contactos">
-            <div class="icono-contacto">
-                <i class="fas fa-phone-square-alt"></i>
-                <p>1555555555555</p>
-            </div>
-            <div class="icono-contacto">
-                <i class="fab fa-whatsapp"></i>
-                <p>1555555555555</p>
-            </div>
-            <div class="icono-contacto">
-                <i class="far fa-envelope"></i>
-                <p>abuela-angelina@gmail.com</p>
-            </div>
-        </div>
-    </section>
-    <!--seccion contacto-->
+    </main>
     <footer class="footer">
         <div class="footer-contenido contenedor">
             <div class="informacion">
