Seccion Servicios y modificación de css

--- a/galeria.html
+++ b/galeria.html
@@ -55,6 +55,27 @@
         </div>
     </section>
     <!--seccion nosotros-->
+    <section class="galeria-principal">
+        <h1>Galeria de Imagenes</h1>
+         <div class="galeria-flex contenedor">
+            <div class="galeria galeria-interna">
+                <a href="img/servicio1.jpg" data-lightbox="galeria">
+                    <img src="img/servicio1.jpg">
+                </a>
+                <a href="img/servicio1.jpg" data-lightbox="galeria">
+                    <img src="img/servicio1.jpg">
+                </a>
+                <a href="img/servicio1.jpg" data-lightbox="galeria">
+                    <img src="img/servicio1.jpg">
+                </a>
+                <a href="img/servicio1.jpg" data-lightbox="galeria">
+                    <img src="img/servicio1.jpg">
+                </a>
+            </div>
+        
+    </section>
+
+
     <!--seccion contacto-->
     <footer class="footer">
         <div class="footer-contenido contenedor">
