--- a/servicios.html
+++ b/servicios.html
@@ -35,26 +35,65 @@
         </div>
     </section>
     <!--barra interna-->
-    <section class="contenedor seccion-nosotros">
-        <h1>Geriátrico Abuela Angelina</h1>
-        <div class="nosotros">
-            <div class="texto-nosotros">
-                <p>"<span>Abuela Angelina</span>
-                    es una de las pocas residencias que hasta el día de la fecha es atendida por su dueño,
-                    <span>Enrique</span>, quien nombró a este espacio bajo el nombre de una persona muy querida, y
-                    recordada por su familia, como una mujer simpática y adorable. Su legado de cuidado y
-                    dedicación, son los valores que dejaron una huella en este hogar.
-                    Enrique cuenta con <span>más de 4 décadas de experiencia</span> en el cuidado de sus residentes,
-                    caracterizado por su gran vocación de servicio y por su habilidad de comprender las
-                    necesidades de quienes llegan a Abuela Angelina como también de acompañar y empatizar
-                    con sus familiares."</p>
+    <main class="servicios-internos contenedor">
+        <h2>Nuestros Servicios</h2>
+        <div class="servicio-unico contenedor">
+            <i class="fas fa-comment-medical salud"></i>
+            <h3>Servicios de Salud</h3>
+            <ul>
+                <li>Nuestro Director Médico Néstor Fraga, atiende todos los sábados a nuestros residentes y se
+                    reúne con nosotros mensualmente para hacer una evaluación de la situación general de
+                    cada integrante de Abuela Angelina.</li>
+                <li>Psicomotricista: visita cada semana y propone ejercicios que estimulan las capacidades
+                    motrices y cognitivas a través de un trabajo integral con los residentes.</li>
+                <li>Nutricionista: encargada de supervisar la alimentación.</li>
+            </ul>
+        </div>
+        <div class="servicio-unico contenedor">
+            <i class="fas fa-building edificio"></i>
+            <h3>Servicios de Acomodación</h3>
+            <ul>
+                <li>Ambientes con iluminación natural</li>
+                <li>Habitaciones individuales con baño privado</li>
+                <li>Habitación privada con baño compartido</li>
+                <li>Baños para sillas de ruedas</li>
+                <li>Calefacción central</li>
+                <li>Jardín</li>
+                <li>Ascensor</li>
+                <li>Espacios comunes de esparcimiento</li>
+            </ul>
+        </div>
+        <div class="servicio-unico contenedor">
+            <i class="fas fa-gifts regalo"></i>
+            <h3>Servicios Generales</h3>
+            <ul>
+                <li>Peluquería</li>
+                <li>Servicio de Cadetería</li>
+                <li>Música</li>
+                <li>Actividades lúdicas</li>
+                <li>Fiestas temáticas y cumpleaños</li>
+                <li>TV Cable</li>
+                <li>WIFI</li>
+                <li>Lavandería (a excepción de prendas especiales que ameriten cuidados complejos)</li>
+            </ul>
+        </div>
+    </main>
+    <section class="contacto parallax">
+        <div class="contenedor tabla-contactos">
+            <div class="icono-contacto">
+                <i class="fas fa-phone-square-alt"></i>
+                <p>1555555555555</p>
             </div>
-            <div class="imagen-nosotros">
-                <img src="img/seccion-nosotros.jpeg" alt="Abuelos">
+            <div class="icono-contacto">
+                <i class="fab fa-whatsapp"></i>
+                <p>1555555555555</p>
+            </div>
+            <div class="icono-contacto">
+                <i class="far fa-envelope"></i>
+                <p>abuela-angelina@gmail.com</p>
             </div>
         </div>
     </section>
-    <!--seccion nosotros-->
     <!--seccion contacto-->
     <footer class="footer">
         <div class="footer-contenido contenedor">
