--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=PT+Sans:ital@0;1&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" href="css/lightbox.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -80,7 +82,12 @@
     </main>
     <!--seccion servicios-->
     <section class="contenedor-mapa">
-        <h2>¿Dónde nos encontramos?</h2>
+        <h2>¿Dónde nos encontramos? <i class="fas fa-map-marker-alt"></i>
+
+
+        </h2>
+        <p>La casa se encuentra ubicada entre dos plazas, en sus cercanías hay un espacio de juegos agradable al que pueden acercarse aprovechando el ambiente como distracción y un buen momento al aire libre. Está a 10 minutos del centro y en la puerta presenta
+            una parada de micros con varias líneas.</p>
 
         <section id="mapa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar"
@@ -89,7 +96,7 @@
     </section>
     <!--seccion mapa-->
     <section class="contenedor galeria-index">
-        <h2>Galería de imagenes</h2>
+        <h2>Galería de imagenes <i class="fas fa-images"></i></h2>
         <div class="galeria-flex contenedor">
             <div class="galeria">
                 <a href="img/servicio1.jpg" data-lightbox="galeria">
@@ -129,7 +136,8 @@
                 <p>abuela-angelina@gmail.com</p>
             </div>
         </div>
-    </section><!--seccion contacto-->
+    </section>
+    <!--seccion contacto-->
     <seccion id="whatsapp">
         <a href="https://wa.me/2614703370">
             <img src="img/whatsapp.png">
@@ -137,20 +145,25 @@
 
         </a>
 
-    </seccion><!--Boton wpp-->
-    
+    </seccion>
+    <!--Boton wpp-->
+
     <footer class="footer">
         <div class="footer-contenido contenedor">
             <div class="informacion">
-                <p>Dirección: <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span></p>
+
+                <p>Dirección: <span>Avenida Agraciada 3002,Montevideo, Departamento de Montevideo, Uruguay
+                    .</span></p>
 
                 <p>Teléfono: <span>155555555555</span></p>
+
             </div>
-            <!-- <div class="minimapa">
-                <h2>Mapa</h2>
+
+            <div class="minimapa">
+
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar"
-                    width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-            </div>-->
+                    width="500" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
         </div>
         <div class="footer2">
             <p class="copyright">
@@ -166,5 +179,6 @@
     <script src="js/lightbox-plus-jquery.min.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
 </body>
+
 
 </html>
