Cambios Genrales estilo

--- a/galeria.html
+++ b/galeria.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://kit.fontawesome.com/ce4b0e445d.js" crossorigin="anonymous"></script>
     <script>
-        document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
     </script>
 </head>
 
@@ -49,191 +49,157 @@
             </div>
         </div>
     </section>
-
     <section class="galeria-principal">
         <h1>Galería de Imagenes</h1>
-        <div class="galeria-flex contenedor">
+        <div class="contenedor">
             <div class="galeria galeria-interna">
                 <a href="img/imagenes-geriatrico/1.jpeg" data-lightbox="galeria">
-                    <img src="img/imagenes-geriatrico/1.jpeg">
-
-
-                    <a href="img/imagenes-geriatrico/2.jpeg" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/2.jpeg">
+                    <img src="img/imagenes-geriatrico/1.jpeg"></a>
+                <a href="img/imagenes-geriatrico/2.jpeg" data-lightbox="galeria">
+                    <img src="img/imagenes-geriatrico/2.jpeg">
+                </a>
+                <a href="img/imagenes-geriatrico/3.jpeg" data-lightbox="galeria">
+                    <img src="img/imagenes-geriatrico/3.jpeg">
+                    <a href="img/imagenes-geriatrico/5.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/5.JPG">
                     </a>
-
-                    <a href="img/imagenes-geriatrico/3.jpeg" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/3.jpeg">
-
-                        <a href="img/imagenes-geriatrico/5.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/5.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/7.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/7.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/9.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/9.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/11.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/11.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/13.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/13.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/15.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/15.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/17.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/17.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/19.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/19.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/21.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/21.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/23.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/23.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/25.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/25.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/27.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/27.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/29.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/29.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/31.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/31.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/34.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/34.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/36.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/36.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/38.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/38.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/40.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/40.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/42.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/42.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/44.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/44.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/46.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/46.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/48.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/48.JPG">
-                        </a>
-
-                        <a href="img/imagenes-geriatrico/46.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/46.JPG">
-                        </a>
-                        <a href="img/imagenes-geriatrico/52.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/52.JPG">
-                        </a>
-                        <a href="img/imagenes-geriatrico/54.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/54.JPG">
-                        </a>
-                        <a href="img/imagenes-geriatrico/46.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/46.JPG">
-                        </a>
-                        <a href="img/imagenes-geriatrico/58.JPG" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/58.JPG">
-                        </a>
-                        <a href="img/imagenes-geriatrico/60.jpeg" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/60.jpeg">
-                        </a>
-                        <a href="img/imagenes-geriatrico/61.jpeg" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/60.jpeg">
-                        </a>
-                        <a href="img/imagenes-geriatrico/62.jpeg" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/62.jpeg">
-                        </a>
-                        <a href="img/imagenes-geriatrico/63.jpeg" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/63.jpeg">
-                        </a>
-                        <a href="img/imagenes-geriatrico/64.jpeg" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/64.jpeg">
-                        </a>
-                        <a href="img/imagenes-geriatrico/65.jpeg" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/65.jpeg">
-                        </a>
-                        <a href="img/imagenes-geriatrico/66.jpeg" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/66.jpeg">
-                        </a>
-                        <a href="img/imagenes-geriatrico/67.jpeg" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/67.jpeg">
-                        </a>
-                        <a href="img/imagenes-geriatrico/68.jpeg" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/68.jpeg">
-                        </a>
-                        <a href="img/imagenes-geriatrico/69.jpeg" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/69.jpeg">
-                        </a>
-                        <a href="img/imagenes-geriatrico/70.jpeg" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/70.jpeg">
-                        </a>
-                        <a href="img/imagenes-geriatrico/71.jpeg" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/71.jpeg">
-                        </a>
-                        <a href="img/imagenes-geriatrico/72.jpeg" data-lightbox="galeria">
-                            <img src="img/imagenes-geriatrico/72.jpeg">
-                        </a>
-
-
+                    <a href="img/imagenes-geriatrico/7.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/7.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/9.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/9.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/11.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/11.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/13.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/13.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/15.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/15.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/17.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/17.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/19.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/19.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/21.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/21.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/23.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/23.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/25.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/25.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/27.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/27.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/29.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/29.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/31.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/31.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/34.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/34.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/36.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/36.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/38.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/38.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/40.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/40.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/42.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/42.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/44.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/44.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/46.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/46.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/48.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/48.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/46.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/46.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/52.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/52.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/54.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/54.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/46.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/46.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/58.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/58.JPG">
+                    </a>
+                    <a href="img/imagenes-geriatrico/60.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/60.jpeg">
+                    </a>
+                    <a href="img/imagenes-geriatrico/61.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/60.jpeg">
+                    </a>
+                    <a href="img/imagenes-geriatrico/62.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/62.jpeg">
+                    </a>
+                    <a href="img/imagenes-geriatrico/63.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/63.jpeg">
+                    </a>
+                    <a href="img/imagenes-geriatrico/64.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/64.jpeg">
+                    </a>
+                    <a href="img/imagenes-geriatrico/65.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/65.jpeg">
+                    </a>
+                    <a href="img/imagenes-geriatrico/66.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/66.jpeg">
+                    </a>
+                    <a href="img/imagenes-geriatrico/67.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/67.jpeg">
+                    </a>
+                    <a href="img/imagenes-geriatrico/68.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/68.jpeg">
+                    </a>
+                    <a href="img/imagenes-geriatrico/69.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/69.jpeg">
+                    </a>
+                    <a href="img/imagenes-geriatrico/70.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/70.jpeg">
+                    </a>
+                    <a href="img/imagenes-geriatrico/71.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/71.jpeg">
+                    </a>
+                    <a href="img/imagenes-geriatrico/72.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/72.jpeg">
+                    </a>
             </div>
         </div>
-
     </section>
-
     <!--seccion contacto-->
     <footer class="footer">
         <div class="footer-contenido contenedor">
             <div class="informacion">
-                <p>Dirección: <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span></p>
-
+                <p>Dirección: <span>Avenida Agraciada 3002,Montevideo, Departamento de Montevideo, Uruguay
+                        .</span></p>
                 <p>Teléfono: <span>155555555555</span></p>
             </div>
-            <!-- <div class="minimapa">
-                <h2>Mapa</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar"
-                    width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-            </div>-->
+            <div class="minimapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
         </div>
         <div class="footer2">
             <p class="copyright">
                 Todos los derechos reservados Residencial Abuela Angelina &copy;
                 <br> Copyright © 2021.
             </p>
-
         </div>
     </footer>
     <!-- footer -->
